[package]
name = "passmenu-rs"
version = "0.3.1"
authors = ["rupansh-arch <rupanshsekar@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4"
rustofi = { git = "https://github.com/rupansh/rustofi" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs = "3"
